[project]
name = "voithru-agent"
version = "0.2.0"
description = "Production-grade Voithru Agent with CrewAI"
readme = "README.md"
requires-python = "<= 3.13"
dependencies = [
    "crewai[tools]>=0.152.0",
    "python-dotenv>=1.1.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]
